# hledger-parse

./: Cargo.toml  README.md  TODO
.github/workflows/: test.yml
benches/: journal.rs
examples/: 10000x1000x10.journal  from_pathbuf.rs  parse.rs
src/: lib.rs  types.rs  utils.rs
src/account/: parsers.rs  tests.rs  types.rs
src/amount/: parsers.rs  tests.rs  types.rs
src/code/: parsers.rs  tests.rs
src/comment/: parsers.rs  tests.rs
src/commodity/: parsers.rs  tests.rs  types.rs
src/date/: mod.rs  parsers.rs  tests.rs
src/description/: parsers.rs  tests.rs  types.rs
src/journal/: parsers.rs  tests.rs  types.rs
src/parsers/: accounts.rs  amount.rs  amounts.rs  code.rs  codes.rs  comments.rs  commodities.rs  dates.rs  descriptions.rs  journal.rs  mod.rs  postings.rs  prices.rs  status.rs  tags.rs  transactions.rs  utils.rs
src/posting/: mod.rs  parsers.rs  tests.rs  types.rs
src/price/: parsers.rs  tests.rs  types.rs
src/status/: parsers.rs  tests.rs  types.rs
src/tag/: parsers.rs  tests.rs  types.rs
src/transaction/: parsers.rs  tests.rs  types.rs
