[package]
name = "hledger-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rust_decimal = "1.23.1"
rust_decimal_macros = "1.23.1"
thiserror = "1.0.56"
winnow = "0.5.35"

[dev-dependencies]
rstest = "0.18.2"
