[package]
name = "hledger-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
thiserror = "2.0.3"
winnow = { version = "0.6.20", features = ["simd"] }

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.23.0"

[[bench]]
name = "journal"
harness = false